--- a/app/globals.css
+++ b/app/globals.css
@@ -47,3 +47,8 @@
 .lk-disconnect-button {
   @apply h-[36px] hover:bg-[#DA2C38] hover:text-[white] bg-[#31100c] border-[#6b221a];
 }
+
+/* Hide the Start Audio button */
+.lk-start-audio-button {
+  display: none !important;
+}
